--- a/main.html
+++ b/main.html
@@ -457,8 +457,8 @@ $(document).ready(function() {
 <div id="minimum_m_for_trapezoidal_and_simpsons">
 $a$: <input class="a" type="number" />
 $b$: <input class="b" type="number" />
-$|\frac{f^{(2)}(\xi)}{2!}|$: <input class="ftrap" type="number" />
-$|\frac{f^{(4)}(\xi)}{4!}|$: <input class="fsimp" type="number" />
+$\max \{|\frac{f^{(2)}(x)}{2!}| : x \in [a,b]\}$: <input class="ftrap" type="number" />
+$\max \{|\frac{f^{(4)}(x)}{4!}| : x \in [a,b]\}$: <input class="fsimp" type="number" />
 required error: <input class="E" type="number" />
 </div>
 
